# mlbb-mcp

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  server.py
evals/: comprehensive_evals.py  run_evals.py
mlbb/: __init__.py  cache.py  client.py  heroes.py  models.py
mlbb/endpoints/: __init__.py  academy.py  hero.py  rank.py
tests/: test_stale_cache.py
