[project]
name = "mlbb-mcp"
version = "0.1.0"
description = "MCP server for MLBB hero data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "diskcache>=5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlbb"]
