[project]
name = "mlbb-mcp"
version = "0.1.0"
description = "MCP server for MLBB hero data"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "diskcache>=5.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.50",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlbb"]
